Fixed blue button on safari

--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,11 @@ position: relative;
 width: 100px;
 border-radius: 10px;
 margin-left: 10px;
-background-color: rgb(255, 250, 250);border: none;
+background-color: rgb(255, 250, 250);
+border: none;
 font-size: 20px;
 font-weight: 600;
+color: black;
 }
 
 .listButton{
@@ -50,6 +52,7 @@ font-weight: 600;
  right: 0;
  height: 50px;
  width: 50px;
+ color:black;
 }
 
 .search-bar{
@@ -58,7 +61,6 @@ font-weight: 600;
   border-radius: 10px;
   padding: 10px;
   border: none;
- 
 }
 
 .bottomBar{
